route2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: icp-proxy-hsts
  namespace: kube-system
spec:
  host: aspera.cpat4i-3-26eee316cb835fe2220635cc2b1cf976-0001.us-east.containers.appdomain.cloud
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: nginx-ingress
    weight: 100
  wildcardPolicy: None
